tests/should_fail/logic_alias/signature_mismatch_params2.stderr
error[E0308]: mismatched types
  --> signature_mismatch_params2.rs:10:36
   |
10 | #[logic_alias(is_greater_logic(x@, y))]
   |               ----------------     ^ expected `Int`, found `i64`
   |               |
   |               arguments to this function are incorrect
   |
note: function defined here
  --> signature_mismatch_params2.rs:6:8
   |
 6 | pub fn is_greater_logic(a: Int, b: Int) -> bool {
   |        ^^^^^^^^^^^^^^^^         ------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
